# python-examples

./: pyproject.toml
examples/src/capital/: capital_case.py
examples/src/wallet_box/: wallet.py
examples/test/: conftest.py
examples/test/capital/: test_capitalize.py
examples/test/wallet_box/: test_wallet.py
