[tool.poetry]
package-mode = false
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["Jitender Kumar <jitender.kumar@krones.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
